test/io/ferguson/bits-errors.negative-writebits.good
bits-errors.chpl:22: error: halt reached - writebits nbits=-1 < 0
